# OCaml-monome

./: dune-project
lib/: dune  function_description.ml  monome.ml  monome.mli  type_description.ml
test/: dune
